Apply changes suggested in issue #1